--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{fragments/base}">
-<span layout:fragment="title">Inicio</span>
-<main layout:fragment="content">Bienvenido al gestor de áreas naturales</main>
+<html
+        data-layout-decorate="~{fragments/base}">
+<span data-layout-fragment="title">Inicio</span>
+<main data-layout-fragment="content">Bienvenido al gestor de áreas naturales</main>
