--- a/src/main/resources/templates/area/add.html
+++ b/src/main/resources/templates/area/add.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{fragments/base}">
-<span layout:fragment="title" th:text="'Añadir area a ' + ${data.municipality.name}"></span>
-<main layout:fragment="content">
+<html
+        data-layout-decorate="~{fragments/base}">
+<span data-layout-fragment="title" data-th-text="'Añadir area a ' + ${data.municipality.name}"></span>
+<main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que desea añadir el area y los datos son correctos?')"
-            th:object="${object}" method="post">
+            data-th-object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" data-th-field="*{name}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('name')}">
+            <tr data-th-each="err : ${#fields.errors('name')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="type">Tipo</label></th>
                 <td>
-                    <select required="required" id="type" th:field="*{type}">
-                        <option th:each="type : ${T(app.model.enums.AreaType).values()}" th:value="${type}"
-                                th:text="${type.name}"></option>
+                    <select required="required" id="type" data-th-field="*{type}">
+                        <option data-th-each="type : ${T(app.model.enums.AreaType).values()}" data-th-value="${type}"
+                                data-th-text="${type.name}"></option>
                     </select>
                 </td>
             </tr>
-            <tr th:each="err : ${#fields.errors('type')}">
+            <tr data-th-each="err : ${#fields.errors('type')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="description">Descripción</label></th>
-                <td><input required="required" type="number" id="description" th:field="*{description}"></td>
+                <td><input required="required" type="number" id="description" data-th-field="*{description}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('description')}">
+            <tr data-th-each="err : ${#fields.errors('description')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="location">Coordenadas</label></th>
-                <td><input required="required" type="text" pattern="" id="location" th:field="*{location}"></td>
+                <td><input required="required" type="text" pattern="" id="location" data-th-field="*{location}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('location')}">
+            <tr data-th-each="err : ${#fields.errors('location')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="image">URL de la imágen</label></th>
-                <td><input required="required" type="url" id="image" th:field="*{image}"></td>
+                <td><input required="required" type="url" id="image" data-th-field="*{image}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('image')}">
+            <tr data-th-each="err : ${#fields.errors('image')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
         </table>
