--- a/src/main/resources/templates/controlStaff/list.html
+++ b/src/main/resources/templates/controlStaff/list.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{fragments/base}">
-<span layout:fragment="title">
-    <span th:if="*{session.user instanceof T(app.model.ControlStaff)}">Tus datos</span>
-    <span th:unless="*{session.user instanceof T(app.model.ControlStaff)}"
-          th:text="'Personal de control de ' ${data[0].area.name} ' (' + ${data[0].municipality.name} + ')' "></span>
+<html
+        data-layout-decorate="~{fragments/base}">
+<span data-layout-fragment="title">
+    <span data-th-if="*{session.user instanceof T(app.model.ControlStaff)}">Tus datos</span>
+    <span data-th-unless="*{session.user instanceof T(app.model.ControlStaff)}"
+          data-th-text="'Personal de control de ' ${data[0].area.name} ' (' + ${data[0].municipality.name} + ')' "></span>
 </span>
-<main layout:fragment="content">
+<main data-layout-fragment="content">
     <table class="table table-striped">
         <thead>
         <tr>
             <th>Identificación</th>
             <th>Nombre</th>
-            <th th:if="${session.user instanceof T(app.model.MunicipalManager)}">Validez</th>
+            <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Validez</th>
             <th>Correo electrónico</th>
             <th>Horario</th>
             <th>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
-                   th:href="@{/control-staff/add/{id}(id=${data[0].areaPeriod.id})}" class="btn btn-success"
+                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"
+                   data-th-href="@{/control-staff/add/{id}(id=${data[0].areaPeriod.id})}" class="btn btn-success"
                    role="button">Añadir</a>
             </th>
         </tr>
         </thead>
         <tbody>
-        <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="6" th:if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal de
+        <tr data-th-if="${#lists.isEmpty(object)}">
+            <td colspan="6" data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal
+                de
                 control registrado
             </td>
-            <td colspan="5" th:unless="${session.user instanceof T(app.model.ControlStaff}">No hay ningún personal de
+            <td colspan="5" data-th-unless="${session.user instanceof T(app.model.ControlStaff}">No hay ningún personal
+                de
                 control registrado
             </td>
         </tr>
-        <tr th:each="object: ${object}">
-            <td th:text="*{object.identification}"></td>
-            <td th:text="*{object.name}"></td>
-            <td th:text="*{object.toSignString}" th:if="${session.user instanceof T(app.model.MunicipalManager)}"></td>
-            <td th:text="*{data[objectStat.index].areaPeriod.toPeriodString}"></td>
+        <tr data-th-each="object: ${object}">
+            <td data-th-text="*{object.identification}"></td>
+            <td data-th-text="*{object.name}"></td>
+            <td data-th-text="*{object.toSignString}"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"></td>
+            <td data-th-text="*{data[objectStat.index].areaPeriod.toPeriodString}"></td>
             <td>
-                <a th:if="${object.active}"
-                   th:href="@{/control-staff/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
+                <a data-th-if="${object.active}"
+                   data-th-href="@{/control-staff/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
-                <a th:if="${object.active}"
-                   th:href="@{/control-staff/delete/{id}(id=${object.id})}"
+                <a data-th-if="${object.active}"
+                   data-th-href="@{/control-staff/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea dar de baja al personal de control?')"
                    class="btn btn-danger" role="button">Dar de baja</a></td>
         </tr>
