--- a/src/main/resources/templates/municipalManager/add.html
+++ b/src/main/resources/templates/municipalManager/add.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{fragments/base}">
-<span layout:fragment="title">Añadir un gestor municipal</span>
-<main layout:fragment="content">
+<html
+        data-layout-decorate="~{fragments/base}">
+<span data-layout-fragment="title">Añadir un gestor municipal</span>
+<main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que desea dar de alta al gestor municipal y los datos son correctos?')"
-            th:object="${object}" method="post">
+            data-th-object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="identification">Identificación</label></th>
-                <td><input required="required" type="text" id="identification" th:field="*{identification}"></td>
+                <td><input required="required" type="text" id="identification" data-th-field="*{identification}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('identification')}">
+            <tr data-th-each="err : ${#fields.errors('identification')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" data-th-field="*{name}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('name')}">
+            <tr data-th-each="err : ${#fields.errors('name')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="mail">Correo Electrónico</label></th>
-                <td><input required="required" type="email" id="mail" th:field="*{mail}"></td>
+                <td><input required="required" type="email" id="mail" data-th-field="*{mail}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('mail')}">
+            <tr data-th-each="err : ${#fields.errors('mail')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="password">Contraseña</label></th>
-                <td><input required="required" type="password" id="password" th:field="*{password}"></td>
+                <td><input required="required" type="password" id="password" data-th-field="*{password}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('password')}">
+            <tr data-th-each="err : ${#fields.errors('password')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="phone">Teléfono</label></th>
-                <td><input required="required" type="tel" pattern="[0-9]{9}" id="phone" th:field="*{phone}"></td>
+                <td><input required="required" type="tel" pattern="[0-9]{9}" id="phone" data-th-field="*{phone}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('phone')}">
+            <tr data-th-each="err : ${#fields.errors('phone')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
         </table>
