--- a/src/main/resources/templates/service/add.html
+++ b/src/main/resources/templates/service/add.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{fragments/base}">
-<span layout:fragment="title"
-      th:text="'Añadir servicios a ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
-<main layout:fragment="content">
+<html
+        data-layout-decorate="~{fragments/base}">
+<span data-layout-fragment="title"
+      data-th-text="'Añadir servicios a ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
+<main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que desea añadir el servicio y los datos son correctos?')"
-            th:object="${object}" method="post">
+            data-th-object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="serviceType">Tipo de servicio</label></th>
-                <td><select required="required" id="serviceType" th:field="*{serviceType}">
-                    <option th:each="type : ${data.typeSelect}" th:value="${type.id}" th:text="${type.name}"></option>
+                <td><select required="required" id="serviceType" data-th-field="*{serviceType}">
+                    <option data-th-each="type : ${data.typeSelect}" data-th-value="${type.id}"
+                            data-th-text="${type.name}"></option>
                 </select>
                 </td>
             </tr>
-            <tr th:each="err : ${#fields.errors('serviceType')}">
+            <tr data-th-each="err : ${#fields.errors('serviceType')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
-                <td><input required="required" type="date" id="scheduleStart" th:field="*{scheduleStart}" th:attr="min=${data.today}"></td>
+                <td><input required="required" type="date" id="scheduleStart" data-th-field="*{scheduleStart}"
+                           data-th-attr="min=${data.today}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('scheduleStart')}">
+            <tr data-th-each="err : ${#fields.errors('scheduleStart')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="scheduleEnd">Fecha de fin</label></th>
-                <td><input type="date" id="scheduleEnd" th:field="*{scheduleEnd}" th:attr="min=${data.today}"></td>
+                <td><input type="date" id="scheduleEnd" data-th-field="*{scheduleEnd}" data-th-attr="min=${data.today}">
+                </td>
             </tr>
-            <tr th:each="err : ${#fields.errors('scheduleEnd')}">
+            <tr data-th-each="err : ${#fields.errors('scheduleEnd')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="periodStart">Hora de inicio</label></th>
-                <td><input required="required" type="time" id="periodStart" th:field="*{periodStart}"></td>
+                <td><input required="required" type="time" id="periodStart" data-th-field="*{periodStart}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('periodStart')}">
+            <tr data-th-each="err : ${#fields.errors('periodStart')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="periodEnd">Hora de fin</label></th>
-                <td><input required="required" type="time" id="periodEnd" th:field="*{periodEnd}"></td>
+                <td><input required="required" type="time" id="periodEnd" data-th-field="*{periodEnd}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('periodEnd')}">
+            <tr data-th-each="err : ${#fields.errors('periodEnd')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
         </table>
-        <a th:href="${data.mail}" target="_blank" class="btn btn-info">Solicitar nuevo tipo</a>
+        <a data-th-href="${data.mail}" target="_blank" class="btn btn-info">Solicitar nuevo tipo</a>
         <input type="submit" value="Añadir" class="btn btn-success"/>
     </form>
 </main>
