--- a/src/main/resources/templates/zone/update.html
+++ b/src/main/resources/templates/zone/update.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{fragments/base}">
-<span layout:fragment="title"
-      th:text="'Actualizar zona de ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'"></span>
-<main layout:fragment="content">
+<html
+        data-layout-decorate="~{fragments/base}">
+<span data-layout-fragment="title"
+      data-th-text="'Actualizar zona de ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'"></span>
+<main data-layout-fragment="content">
     <form onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
-          th:object="${object}" method="post">
+          data-th-object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="name">Nombre</label></th>
-                <td><input required="required" type="text" id="name" th:field="*{name}"></td>
+                <td><input required="required" type="text" id="name" data-th-field="*{name}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('name')}">
+            <tr data-th-each="err : ${#fields.errors('name')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th><label for="capacity">Capacidad</label></th>
-                <td><input required="required" type="text" id="capacity" th:field="*{capacity}"></td>
+                <td><input required="required" type="text" id="capacity" data-th-field="*{capacity}"></td>
             </tr>
-            <tr th:each="err : ${#fields.errors('capacity')}">
+            <tr data-th-each="err : ${#fields.errors('capacity')}">
                 <td colspan="2">
-                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                    <div class="alert alert-danger" role="alert" data-th-text="${err}"></div>
                 </td>
             </tr>
         </table>
